--- a/css/anvil-1a1508.webflow.css
+++ b/css/anvil-1a1508.webflow.css
@@ -1059,7 +1059,7 @@ label {
   grid-column-gap: 40px;
   grid-row-gap: 40px;
   color: #fff;
-  background-image: url('../images/13.webp'), url('../images/');
+  background-image: url('../images/13.webp'), url('../images/infrastructure_expand.webp');
   background-position: 0 100%, 50%;
   background-repeat: no-repeat, no-repeat;
   background-size: 25%, cover;
