image fix mobile

--- a/css/anvil-1a1508.webflow.css
+++ b/css/anvil-1a1508.webflow.css
@@ -2692,7 +2692,7 @@ label {
   }
 
   .div-block-31.on {
-    background-image: url('../images/');
+    background-image: url('../images/infrastructure_expand.webp');
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -3318,7 +3318,7 @@ label {
   }
 
   .div-block-31.on {
-    background-image: url('../images/');
+    background-image: url('../images/infrastructure_expand.webp');
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
