--- a/css/anvil-1a1508.webflow.css
+++ b/css/anvil-1a1508.webflow.css
@@ -3322,6 +3322,7 @@ label {
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: scroll;
   }
 
   .grid-4 {
