--- a/css/anvil-1a1508.webflow.css
+++ b/css/anvil-1a1508.webflow.css
@@ -15,7 +15,7 @@
 }
 
 .w-embed-youtubevideo {
-  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/youtube-placeholder.2b05e7d68d.svg');
+  background-image: url("https://d3e54v103j8qbb.cloudfront.net/static/youtube-placeholder.2b05e7d68d.svg");
   background-position: 50%;
   background-size: cover;
   width: 100%;
@@ -109,7 +109,9 @@ label {
 .hero-section.registration {
   text-align: center;
   color: #fff;
-  background-image: linear-gradient(#0000 36%, #000000c2), linear-gradient(#00000040, #00000040), url('../images/andrey-metelev-qpAOxji4dAo-unsplash_1.avif');
+  background-image: linear-gradient(#0000 36%, #000000c2),
+    linear-gradient(#00000040, #00000040),
+    url("../images/andrey-metelev-qpAOxji4dAo-unsplash_1.avif");
   background-position: 0 0, 0 0, 50% 100%;
   background-size: auto, auto, cover;
   justify-content: center;
@@ -185,7 +187,8 @@ label {
   display: none;
 }
 
-.section.certifications, .section.no-pd-tp {
+.section.certifications,
+.section.no-pd-tp {
   padding-top: 180px;
 }
 
@@ -330,7 +333,7 @@ label {
   grid-row-gap: 0px;
   cursor: pointer;
   background-color: #fbfbfb;
-  background-image: url('../images/cables-card1_1.webp');
+  background-image: url("../images/cables-card1_1.webp");
   background-position: 50% 100%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -342,7 +345,7 @@ label {
   width: 100%;
   height: 702px;
   padding: 50px 30px 220px;
-  transition: all .3s;
+  transition: all 0.3s;
   display: flex;
   position: absolute;
   bottom: 20%;
@@ -354,7 +357,7 @@ label {
 
 .card-template.second {
   background-color: #fff;
-  background-image: url('../images/distributech-new-new_1.webp');
+  background-image: url("../images/distributech-new-new_1.webp");
   background-position: 50% 100%;
   background-size: contain;
   height: auto;
@@ -362,7 +365,7 @@ label {
 }
 
 .card-template.third {
-  background-image: url('../images/image_urja_1.webp');
+  background-image: url("../images/image_urja_1.webp");
 }
 
 .div-block-3 {
@@ -498,7 +501,7 @@ label {
   grid-row-gap: 24px;
   color: #fff;
   text-align: center;
-  background-image: url('../images/gradient_1.webp');
+  background-image: url("../images/gradient_1.webp");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -533,7 +536,7 @@ label {
   justify-content: center;
   align-items: center;
   padding: 12px 40px;
-  transition: all .3s;
+  transition: all 0.3s;
   display: flex;
   position: relative;
 }
@@ -579,7 +582,8 @@ label {
   grid-row-gap: 3px;
   color: #fff;
   text-align: left;
-  background-image: linear-gradient(#00000080, #0000 39%), url('../images/in_1.webp');
+  background-image: linear-gradient(#00000080, #0000 39%),
+    url("../images/in_1.webp");
   background-position: 0 0, 50%;
   background-repeat: repeat, no-repeat;
   background-size: auto, cover;
@@ -684,7 +688,7 @@ label {
   border-radius: 100%;
   width: 48px;
   height: 48px;
-  transition: all .3s;
+  transition: all 0.3s;
   inset: -128px 0% auto auto;
 }
 
@@ -712,7 +716,7 @@ label {
   border-radius: 100%;
   width: 48px;
   height: 48px;
-  transition: all .3s;
+  transition: all 0.3s;
   inset: -128px 57px auto auto;
 }
 
@@ -778,7 +782,7 @@ label {
   cursor: pointer;
   font-size: 18px;
   text-decoration: underline;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .paragraph-2.und:hover {
@@ -1000,7 +1004,7 @@ label {
   grid-column-gap: 80px;
   grid-row-gap: 80px;
   grid-template-rows: auto;
-  grid-template-columns: .4fr 1fr;
+  grid-template-columns: 0.4fr 1fr;
   grid-auto-columns: 1fr;
   width: 100%;
   height: auto;
@@ -1055,7 +1059,7 @@ label {
   grid-column-gap: 40px;
   grid-row-gap: 40px;
   color: #fff;
-  background-image: url('../images/13.webp'), url('../images/');
+  background-image: url("../images/13.webp"), url("../images/");
   background-position: 0 100%, 50%;
   background-repeat: no-repeat, no-repeat;
   background-size: 25%, cover;
@@ -1393,7 +1397,7 @@ label {
 
 .div-block-42 {
   color: #fff;
-  background-image: url('../images/service_expand_colapse_1.webp');
+  background-image: url("../images/service_expand_colapse_1.webp");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1515,7 +1519,7 @@ label {
   border-radius: 20px;
   width: 100%;
   margin-top: 20px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .submit-button:hover {
@@ -1567,7 +1571,7 @@ label {
   align-items: center;
   width: 36px;
   height: 36px;
-  transition: all .3s;
+  transition: all 0.3s;
   display: flex;
 }
 
@@ -1606,7 +1610,7 @@ label {
 }
 
 .div-block-51 {
-  background-image: url('../images/cables-card1_1.webp');
+  background-image: url("../images/cables-card1_1.webp");
   background-position: 50% 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1615,7 +1619,7 @@ label {
 }
 
 .div-block-51._3rd {
-  background-image: url('../images/image_urja_1.webp');
+  background-image: url("../images/image_urja_1.webp");
   background-position: 50%;
   background-size: cover;
   height: 300px;
@@ -1727,7 +1731,7 @@ label {
 
 .footer-divider {
   background-color: var(--light-blue);
-  opacity: .4;
+  opacity: 0.4;
   width: 100%;
   height: 1px;
   margin-top: 70px;
@@ -1829,7 +1833,7 @@ label {
   justify-content: center;
   align-items: center;
   width: 100%;
-  transition: all .3s;
+  transition: all 0.3s;
   display: flex;
 }
 
@@ -1917,7 +1921,8 @@ label {
   display: none;
 }
 
-.mask-3, .slide-3 {
+.mask-3,
+.slide-3 {
   width: 100%;
 }
 
@@ -1948,7 +1953,7 @@ label {
   align-items: center;
   width: 100%;
   height: 100%;
-  transition: all .3s;
+  transition: all 0.3s;
   display: flex;
 }
 
@@ -2017,7 +2022,7 @@ label {
   align-items: center;
   width: 40px;
   height: 40px;
-  transition: all .3s;
+  transition: all 0.3s;
   display: flex;
 }
 
@@ -2071,7 +2076,7 @@ label {
   padding: 12px 25px;
   font-size: 12px;
   line-height: 20px;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 .button-primary:hover {
@@ -2093,7 +2098,8 @@ label {
   color: #000;
 }
 
-.nav-dropdown-link:focus-visible, .nav-dropdown-link[data-wf-focus-visible] {
+.nav-dropdown-link:focus-visible,
+.nav-dropdown-link[data-wf-focus-visible] {
   outline-offset: 0px;
   color: #0050bd;
   border-radius: 5px;
@@ -2119,7 +2125,7 @@ label {
 
 .nav-link {
   color: #1a1b1f;
-  letter-spacing: .25px;
+  letter-spacing: 0.25px;
   cursor: pointer;
   margin-left: 5px;
   margin-right: 5px;
@@ -2127,14 +2133,15 @@ label {
   font-size: 14px;
   line-height: 14px;
   text-decoration: none;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .nav-link:hover {
   color: #0c0c0c;
 }
 
-.nav-link:focus-visible, .nav-link[data-wf-focus-visible] {
+.nav-link:focus-visible,
+.nav-link[data-wf-focus-visible] {
   outline-offset: 0px;
   color: #0050bd;
   border-radius: 4px;
@@ -2166,14 +2173,15 @@ label {
 }
 
 .nav-dropdown-toggle {
-  letter-spacing: .25px;
+  letter-spacing: 0.25px;
   padding: 5px 30px 5px 10px;
   font-size: 14px;
   line-height: 14px;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
-.nav-dropdown-toggle:focus-visible, .nav-dropdown-toggle[data-wf-focus-visible] {
+.nav-dropdown-toggle:focus-visible,
+.nav-dropdown-toggle[data-wf-focus-visible] {
   outline-offset: 0px;
   color: #0050bd;
   border-radius: 5px;
@@ -2203,7 +2211,7 @@ label {
 }
 
 .nav-link-2 {
-  letter-spacing: .25px;
+  letter-spacing: 0.25px;
   color: #fff;
   margin-left: 5px;
   margin-right: 5px;
@@ -2219,7 +2227,8 @@ label {
   text-decoration: none;
 }
 
-.nav-link-2:focus-visible, .nav-link-2[data-wf-focus-visible] {
+.nav-link-2:focus-visible,
+.nav-link-2[data-wf-focus-visible] {
   outline-offset: 0px;
   color: var(--neon-green);
   border-radius: 4px;
@@ -2442,11 +2451,15 @@ label {
     background-size: cover;
   }
 
-  .service-1-popup, .service-2-popup, .service-3-popup {
+  .service-1-popup,
+  .service-2-popup,
+  .service-3-popup {
     display: none;
   }
 
-  .navbar-logo-left-container.shadow-three, .navbar-wrapper-2, .container-4 {
+  .navbar-logo-left-container.shadow-three,
+  .navbar-wrapper-2,
+  .container-4 {
     max-width: 1200px;
   }
 
@@ -2642,11 +2655,13 @@ label {
     padding-right: 0;
   }
 
-  .paragraph-3, .div-block-22 {
+  .paragraph-3,
+  .div-block-22 {
     font-size: 16px;
   }
 
-  .div-block-24, .div-block-24.reverse {
+  .div-block-24,
+  .div-block-24.reverse {
     padding: 20px;
   }
 
@@ -2670,7 +2685,7 @@ label {
     grid-column-gap: 40px;
     grid-row-gap: 40px;
     flex-flow: column;
-    grid-template-columns: .4fr;
+    grid-template-columns: 0.4fr;
     display: flex;
   }
 
@@ -2693,7 +2708,7 @@ label {
   }
 
   .div-block-31.on {
-    background-image: url('../images/');
+    background-image: url("../images/");
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -2764,7 +2779,8 @@ label {
     font-size: 34px;
   }
 
-  .code-embed-5, .code-embed-5.green {
+  .code-embed-5,
+  .code-embed-5.green {
     justify-content: center;
     align-items: center;
     width: 30px;
@@ -2827,7 +2843,8 @@ label {
     inset: 0% 0% 0% auto;
   }
 
-  .div-block-45, .div-block-50 {
+  .div-block-45,
+  .div-block-50 {
     height: auto;
   }
 
@@ -2886,7 +2903,9 @@ label {
     font-size: 16px;
   }
 
-  .image-19, .image-20, .image-21 {
+  .image-19,
+  .image-20,
+  .image-21 {
     width: 60px;
   }
 
@@ -2944,7 +2963,7 @@ label {
 
   .button-primary {
     color: #0c0c0c;
-    letter-spacing: .25px;
+    letter-spacing: 0.25px;
     background-color: #0000;
     padding: 0;
     font-size: 20px;
@@ -3066,7 +3085,8 @@ label {
     font-size: 28px;
   }
 
-  .div-block-64, .div-block-65 {
+  .div-block-64,
+  .div-block-65 {
     height: auto;
   }
 
@@ -3108,7 +3128,8 @@ label {
     padding-bottom: 80px;
   }
 
-  .container, .container.centered.certificates {
+  .container,
+  .container.centered.certificates {
     grid-column-gap: 60px;
     grid-row-gap: 60px;
   }
@@ -3173,7 +3194,8 @@ label {
     width: 100%;
   }
 
-  .div-block-5.green, .div-block-5.blue {
+  .div-block-5.green,
+  .div-block-5.blue {
     width: 100%;
     left: 0;
   }
@@ -3319,7 +3341,7 @@ label {
   }
 
   .div-block-31.on {
-    background-image: url('../images/');
+    background-image: url("../images/");
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -3428,7 +3450,8 @@ label {
     margin-bottom: 20px;
   }
 
-  .text-field.btm-0, .select._500 {
+  .text-field.btm-0,
+  .select._500 {
     width: 100%;
   }
 
@@ -3481,7 +3504,8 @@ label {
     align-items: flex-start;
   }
 
-  .footer-link:hover, .footer-link:active {
+  .footer-link:hover,
+  .footer-link:active {
     color: var(--neon-green);
   }
 
@@ -3531,7 +3555,8 @@ label {
     display: block;
   }
 
-  .image-20, .image-21 {
+  .image-20,
+  .image-21 {
     display: none;
   }
 
@@ -3731,7 +3756,7 @@ label {
   }
 
   .card-template {
-    background-image: url('../images/cables-card1_1.webp');
+    background-image: url("../images/cables-card1_1.webp");
     background-position: 50% 130%;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -3740,7 +3765,7 @@ label {
   }
 
   .card-template.second {
-    background-image: url('../images/distributech-new-new_1.webp');
+    background-image: url("../images/distributech-new-new_1.webp");
     background-position: 50% 100%;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -3748,7 +3773,7 @@ label {
   }
 
   .card-template.third {
-    background-image: url('../images/image_urja_1.webp');
+    background-image: url("../images/image_urja_1.webp");
     background-position: 50% 100%;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -3761,14 +3786,16 @@ label {
     align-items: center;
   }
 
-  .div-block-5.green, .div-block-5.blue {
+  .div-block-5.green,
+  .div-block-5.blue {
     justify-content: center;
     align-items: center;
     width: 100%;
     left: 0;
   }
 
-  .gradient-card, .non-gradient-card {
+  .gradient-card,
+  .non-gradient-card {
     aspect-ratio: 2 / 3;
   }
 
@@ -3805,7 +3832,8 @@ label {
     top: 0%;
   }
 
-  .div-block-19._2, .div-block-19._3 {
+  .div-block-19._2,
+  .div-block-19._3 {
     display: none;
   }
 
@@ -3814,7 +3842,8 @@ label {
     align-items: flex-start;
   }
 
-  .div-block-21, .div-block-23 {
+  .div-block-21,
+  .div-block-23 {
     grid-template-columns: 1fr;
   }
 
@@ -3839,7 +3868,8 @@ label {
     font-size: 14px;
   }
 
-  .div-block-32, .grid-4 {
+  .div-block-32,
+  .grid-4 {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -3849,7 +3879,7 @@ label {
   }
 
   .brand.w--current {
-    padding-left: 0;
+    padding-left: 20px;
     padding-right: 10px;
   }
 
@@ -3862,7 +3892,8 @@ label {
     right: 20px;
   }
 
-  .service-1-popup, .service-2-popup {
+  .service-1-popup,
+  .service-2-popup {
     padding: 20px;
     display: none;
   }
@@ -3892,7 +3923,8 @@ label {
     height: 80px;
   }
 
-  .div-block-41, .div-block-42 {
+  .div-block-41,
+  .div-block-42 {
     padding: 20px;
   }
 
@@ -4019,7 +4051,8 @@ label {
     background-color: #fff;
   }
 
-  .navbar-brand, .navbar-brand.w--current {
+  .navbar-brand,
+  .navbar-brand.w--current {
     width: 140px;
   }
 
@@ -4034,7 +4067,8 @@ label {
     margin-top: 0;
   }
 
-  .menu-button-3, .menu-button-3.w--open {
+  .menu-button-3,
+  .menu-button-3.w--open {
     padding-right: 20px;
   }
 
@@ -4064,7 +4098,9 @@ label {
   justify-self: center;
 }
 
-#w-node-_09df9d50-07d9-7ebd-465b-3b137bf914a6-46d3db74, #w-node-_09df9d50-07d9-7ebd-465b-3b137bf914af-46d3db74, #w-node-_09df9d50-07d9-7ebd-465b-3b137bf914ba-46d3db74 {
+#w-node-_09df9d50-07d9-7ebd-465b-3b137bf914a6-46d3db74,
+#w-node-_09df9d50-07d9-7ebd-465b-3b137bf914af-46d3db74,
+#w-node-_09df9d50-07d9-7ebd-465b-3b137bf914ba-46d3db74 {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
@@ -4127,5 +4163,3 @@ label {
     grid-area: 1 / 2 / 2 / 3;
   }
 }
-
-
