--- a/css/anvil-1a1508.webflow.css
+++ b/css/anvil-1a1508.webflow.css
@@ -3883,6 +3883,10 @@ label {
     padding-right: 10px;
   }
 
+  .brand {
+    padding-left: 20px;
+  }
+
   .notice {
     padding-left: 20px;
     padding-right: 20px;
